--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -5,6 +5,7 @@
     <meta charset="utf-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>deeplabv3plus-demo</title>
+    <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
 </head>
 
 <body>
