--- a/webapp/public/index.html
+++ b/webapp/public/index.html
@@ -6,6 +6,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1" />
     <title>deeplabv3plus-demo</title>
     <link rel="stylesheet" href="%PUBLIC_URL%/index.css" />
+    <link rel="shortcut icon" href="#" />
 </head>
 
 <body>
